Fix overflow scroll, add tags function

--- a/css/css.css
+++ b/css/css.css
@@ -3,10 +3,13 @@
   padding: 0;
   box-sizing: border-box;
 }
+.no-scroll{
+  overflow: hidden;
+}
 body{
   background-color: white;
   font-family: 'Open Sans', sans-serif;
-  margin: 0 0 55px 0;
+  margin: 0 0 3rem 0;
 }
 
 /*more sort button*/
@@ -94,11 +97,11 @@ body{
   position: fixed;
   overflow-x: auto;
   bottom: 0;
-  left: 5%;
+  left: 10%;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 90%;
+  width: 80%;
   padding: 0.5rem 2rem;
   background-color: #ececec;
   border: 3px solid black;
@@ -115,8 +118,9 @@ body{
 .overlay{
   display: none;
   content: "";
+  overflow: hidden;
   background-color: black;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   opacity: 0.8;
@@ -176,6 +180,10 @@ body{
   width: 2.5rem;
   border-radius: 3rem;
 }
+.tag-items input{
+  width: 80%;
+  background-color: white;
+}
 .newTag:active{
   background-color: #ececec;
 }
@@ -192,7 +200,7 @@ body{
 
 .cross{
   display: none;
-  position: fixed;
+  position: absolute;
   bottom: 20%;
   width: 100%;
   align-items: center;
@@ -214,13 +222,15 @@ body{
   list-style: none;
   background-color: white;
   border-radius: 1rem;
-  overflow: hidden
 }
 .about-items ul{
   border-radius: 0;
 }
 #about-items-last-li{
   border-radius: 0 0 1rem 1rem;
+}
+.tag-items{
+  overflow: scroll;
 }
 .tag-items ul{
   border-radius: 1rem 1rem 0 0;
@@ -277,6 +287,10 @@ body{
   border-bottom: 1px solid black;
   font-size: 1.1rem;
   
+}
+.tags{
+  overflow:scroll;
+  -webkit-overflow-scrolling: touch;
 }
 @keyframes fadeIn {
   0% { opacity: 0;
